# lmail

./: .clang-tidy  .gitignore  CMakeLists.txt  conanfile.py  conanfile.txt  readme.md
db/: empty-schema.db  prepare_sys_db.sh
etc/: lmail.conf.in
src/: CMakeLists.txt  application.hpp  cli.cpp  cli.hpp  cli_sm.hpp  cli_states.cpp  cli_states.hpp  cmd_interface.hpp  color.hpp  command_lister_interface.hpp  crypt.hpp  fsm.hpp  inbox.hpp  inbox_message.hpp  logged_user.hpp  logged_user_utility.hpp  main.cpp  message.hpp  profile.hpp  readline.cpp  readline.hpp  state.hpp  storage.hpp  types.hpp  uread.hpp  user.hpp  utility.hpp
src/cmds/: cmd.hpp  cmd_args.hpp  cmd_base_args.hpp  cmd_help.hpp  cmd_inbox.hpp  cmd_init_parser.hpp  cmd_interface.hpp  cmd_invoker.hpp  cmd_keyassoc.hpp  cmd_keyexp.hpp  cmd_keygen.hpp  cmd_keyimp.hpp  cmd_keys_list.hpp  cmd_list_keys.hpp  cmd_list_users.hpp  cmd_lister_interface.hpp  cmd_login.hpp  cmd_logout.cpp  cmd_logout.hpp  cmd_parser_default.cpp  cmd_parser_default.hpp  cmd_parser_interface.hpp  cmd_quit.hpp  cmd_read.hpp  cmd_readmsg.hpp  cmd_register.hpp  cmd_remove.hpp  cmd_rmkey.hpp  cmd_rmkeyassoc.hpp  cmd_rmkeyimp.hpp  cmd_rmmsg.hpp  cmd_send.hpp  cmd_sendmsg.hpp  cmd_users_list.hpp
src/db/: message.hpp  user.hpp
src/sm/: cli.hpp  cli_events.hpp
src/states/: cli_state.hpp  cmd_state.cpp  cmd_state.hpp  init_state.hpp  logged_in_state.cpp  logged_in_state.hpp  main_state.cpp  main_state.hpp
test/: CMakeLists.txt  main.cpp
